2001-08-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/XError.c (error_name):
	(request_name):
	fixed core dump in error handling

2001-08-15  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	* acinclude.m4:
	* INSTALL:
	* INSTALL.fvwm:
	renamed --disable-gnome to --disable-gnome-hints;
	documented configure options --with-gnome*;
	small improvements in documentation;
	use underscore in version instead of dash that causes rpm problems

2001-08-14  Mikhael Goikhman  <migo@homemail.com>

	* libs/Makefile.am:
	added fvwmrect.h to dist

2001-08-14  Dan Espen  <dane@mk.telcordia.com>

	* libs/XineramaSupport.c: Disable debug printing.

2001-08-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/defaults.h (DEFAULT_MENU_STYLE):
	reset colour sets in default menu style too

2001-08-13  Mikhael Goikhman  <migo@homemail.com>

	* builtins.c:
	* events.c:
	completed the libstroke-0.5 compatibility fix

2001-08-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (draw_move_resize_grid):
	fixed drawing of resize grid when invoked from button or key press

	* fvwm/placement.c (PlaceWindow):
	rewrote a condition to improve readability
	fixed StartsOn... w/ SkipMapping

2001-08-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/session.c (MatchWinToSM):
	(LoadWindowStates):
	(SaveWindowStates):
	* fvwm/move_resize.c (CMD_Resize):
	* fvwm/events.c (HandlePropertyNotify):
	(HandleConfigureRequest):
	* fvwm/move_resize.c (CMD_ResizeMove):
	(CMD_Maximize):
	(CMD_Resize):
	* fvwm/update.c (apply_window_updates):
	* fvwm/add_window.c (AddWindow):
	* fvwm/geometry.c (constrain_size):
	(gravity_constrain_size):
	the Resize command honors the window gravity
	changing the size increment of maximized windows no longer shrinks the
	window

	* fvwm/icons.c:
	keep expanded icon titles on screen

2001-08-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (do_all_iconboxes):
	default icon box fills the primary screen
